clusters/home/web-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: web
  name: web
  namespace: ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
    spec:
      containers:
      - name: web
        image: container-registry.k8s.home.blrobinson.uk/docker-web:latest
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: home-cert
          mountPath: /etc/cert/
      volumes:
      - name: home-cert
        secret:
          secretName: home-cert
