clusters/home/web-ingress/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: web
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
    spec:
      containers:
      - name: web
        image: container-registry.k8s.home.blrobinson.uk/docker-web:sha-054f000
        ports:
          - containerPort: 80
        volumeMounts:
          - name: screenshots
            mountPath: /var/www/vhosts/screenshots
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "150m"
            memory: "128Mi"
          limits:
            cpu: "150m"
            memory: "128Mi"
      volumes:
        - name: screenshots
          nfs:
            server: 10.0.0.3 # TODO MAKE DNS?
            path: /data/screenshots
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: web
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
