clusters/home/web-ingress/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-ingress
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      metallb.io/loadBalancerIPs: 10.0.3.101,2a06:61c2:27ae:2::4
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - kind: Secret
          name: internals-cert
