clusters/home/web-ingress/gateway-nginx.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-ingress
  namespace: ingress
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      metallb.universe.tf/loadBalancerIPs: 10.0.3.100,2a06:61c2:27ae:2::3
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: public-cert
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-ingress-http
  namespace: ingress
spec:
  hostnames:
    - shed-cam.blrobinson.uk
    - grabs.blrobinson.uk
    - mail.blrobinson.uk
    - unifi.blrobinson.uk
  parentRefs:
    - name: nginx-ingress
      sectionName: http
  rules:
    - backendRefs:
        - name: web
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-ingress-https
  namespace: ingress
spec:
  hostnames:
    - shed-cam.blrobinson.uk
    - grabs.blrobinson.uk
    - mail.blrobinson.uk
    - unifi.blrobinson.uk
  parentRefs:
    - name: nginx-ingress
      sectionName: https
  rules:
    - backendRefs:
        - name: web
          port: 80
