clusters/home/web-ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: ingress
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: web
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-ingress
  namespace: ingress
spec:
  addresses:
    - type: IPAddress
      value: 10.0.0.101
  gatewayClassName: cilium
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - kind: Secret
          name: home-cert
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: web-ingress-http
  namespace: ingress
spec:
  parentRefs:
  - name: web-ingress
    kind: Gateway
    sectionName: http
  rules:
  - matches:
    backendRefs:
      - name: web
        port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: web-ingress-https
  namespace: ingress
spec:
  parentRefs:
  - name: web-ingress
    kind: Gateway
    sectionName: https
  rules:
    - backendRefs:
      - name: web
        port: 443
